<resources>
    <string name="app_name">MealAndMeet</string>
    <string name="yourName">Your name</string>
    <string name="yourEmail">Your e-mail</string>
    <string name="yourAge">Your age</string>
    <string name="yourSurnames">Your surname</string>
    <string name="yourAddress">Your meeting address</string>
    <string name="youpassword">Your password</string>
    <string name="youpasswordTwice">Repeat password</string>
    <string name="loadingText">Loading...</string>
    <string name="title_activity_maps">Map</string>
    <string name="invalid_parameters">Invalid parameters</string>
    <string name="welcome">Welcome</string>
    <string name="closestFriend">Closest friend at </string>
    <string name="send_profile">Send</string>
    <string name="cancel_profile">Cancel</string>
    <string name="wrongEmail">Email incorrect</string>
    <string name="wrongPass">Wrong password</string>
    <string name="wrongName">Wrong name, try another</string>
    <string name="wrongPhone">Wrong phone number</string>
    <string name="allFields">All fields please</string>
    <string name="yourPhone">Your phone</string>
    <string name="userCreated">Let\'s go!</string>
    <string name="needPermissions">This app needs permissions to work</string>
    <string name="goCalendar">Calendar</string>
    <string name="go_calendar">Calendar</string>
    <string name="next_meet_title">Next meet:</string>
    <string name="menu_group_title">Menu: </string>
    <string name="who_cooks">Who cooks:</string>
    <string name="price_title">Menu price: </string>
    <string name="go_Group">Group Info</string>
    <string name="create_group">Create group</string>
    <string name="choose_meet">Choose your first meal:</string>
    <string name="choose_day">Choose your preferred day: </string>
    <string name="group_creation">Group creation</string>
    <string name="send_group">Create!!</string>
    <string name="select_location">Select location</string>
    <string name="monday">Monday</string>
    <string name="hamburguers">Hamburguers</string>
    <string name="not_location">You have not selected a location</string>
    <string name="group_created">Group created!</string>
    <string name="need_location">We need a location to continue</string>
    <string name="my_groups">My groups</string>
    <string name="title_activity_select_location">Map</string>
    <string name="select_area">Area radius: </string>
    <string name="area_selected">Area selected!</string>
    <string name="point_selected">Point selected</string>
    <string name="need_all_fields">Need all fields</string>
    <string name="choose_hour">Choose hour</string>
    <string name="moveBarToIncreaseRadius">Move top bar to increase radius</string>
    <string name="group_description">Info:</string>
    <string name="info_title">Group info:</string>
    <string name="searching">Searching at...</string>
    <string name="dateInfo">Date info: </string>
    <string name="dateDay">Day: </string>
    <string name="view_group">View group</string>
    <string name="hour">Hour: </string>
    <string name="view_date">View dates</string>
    <string name="data_error">Data error, try again</string>
    <string name="user_name">Name:</string>
    <string name="total_meets">Meets:</string>
    <string name="age">Age:</string>
    <string name="join">Join group</string>
    <string name="leaveGroup">Leave this group</string>
    <string name="notifyNewRequest">You have a new group request</string>
    <string name="ullBeNotified">Wait untill group admin accept/deny you</string>
    <string name="log_out">Log out</string>
    <string name="youHaveLeftGroup">You have left this group</string>
    <string name="denyUser">Deny</string>
    <string name="acceptUser">Accept</string>
    <string name="watchRequest">Group requests</string>
    <string name="youHaveApplied">You have applied to this group already</string>
    <string name="clickToCheck">Click to check it!</string>
    <string name="waiting_response">Waiting for a response</string>
    <string name="clickToAccept">Click to accept/deny</string>
    <string name="userAccepted">User granted!</string>
    <string name="userDenied">User denied</string>
    <string name="select_photo">Select image</string>
    <string name="choose_source">Choose the source:</string>
    <string name="info_example">Brunches, lunches, dinners...</string>
    <string name="choose_image">You must chose an image</string>
    <string name="no_money">We have no money to maintenance</string>
    <string name="click_to_edit">Click field to edit</string>
    <string name="user_modified">User modified!</string>
    <string name="group">Group:</string>
    <string name="watch_date">Watch it</string>
    <string name="last_dates">Last dates updated</string>
    <string name="go">Go</string>
    <string name="single_date">Single date</string>
    <string name="edit">Edit</string>
    <string name="weekDay">Day of week:</string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="title_activity_create_calendar">CreateCalendar</string>
    <string name="calend_cre">Create your calendar</string>
    <string name="title_activity_select_calendar_location">Map</string>
    <string name="group_full">This group is full</string>
    <string name="my_calendars">Calendars</string>
    <string name="watch_all_dates">Watch all dates!</string>
    <string name="selected_dates">Selected dates</string>
    <string name="select_dates">Select dates to watch it</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="you_edit_date">Press EDIT to send changes</string>
    <string name="title_activity_select__date__location">Map</string>
    <string name="title_activity_select_date_location">Map</string>
    <string name="group_position">Group position</string>
    <string name="create_whatsapp">No WhatsApp group, LINK IT!</string>
    <string name="info_whats">Information to link with WhatsApp</string>
    <string name="create_regular_group">1. Create WhatsApp group</string>
    <string name="go_to_group_info">2. Go to \"Group info\"</string>
    <string name="go_to_invite_link">3. Go to \"Invite via link\"</string>
    <string name="copy_link_and">4. Copy link and paste here</string>
    <string name="this_group_no_whats">This group have not WhatsApp</string>
    <string name="group_linked">Group linked!</string>
    <string name="go_select_position">Click map to select position</string>
    <string name="date_edited">Date edited!</string>
    <string name="date_no_edited">You have dates tomorrow not edited</string>
    <string name="title_activity_view_location">Map</string>
    <string name="search">Search!</string>
    <string name="scroll_down_select">Scroll down selected dates</string>
    <string name="send_date">Send</string>
    <string name="edit_admin">Edit</string>
    <string name="remove_admin">Remove</string>
    <string name="users_admin">Users</string>
    <string name="groups_admin">Groups</string>
    <string name="admin_dates">Dates</string>
    <string name="admin_images">Images</string>
    <string name="admin_group_images">Group images</string>
    <string name="user_images">User images</string>
    <string name="load_all">All images</string>
</resources>
