<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context=".CreateWhats">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/infoTitle"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="3dp"
                android:text="@string/info_whats"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="240dp"
                tools:layout_editor_absoluteY="134dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/create_regular_group" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/go_to_group_info" />

            <TextView
                android:id="@+id/textView8"
                android:paddingVertical="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_invite_link" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/copy_link_and" />

            <EditText
                android:id="@+id/linkData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="@color/colorPrimary"
                android:paddingVertical="12dp"
                android:background="@color/lightGrey"
                android:hint="INVITE LINK HERE"/>
        </LinearLayout>

        <Button
            android:id="@+id/sendLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="22dp"
            android:inputType="text"
            android:text="@string/send_group"
            android:textColor="@color/wordsTitle" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>