<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearBotton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayoutSelectMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_area"
            android:padding="16dp"
            android:textSize="14dp" />


        <EditText
            android:id="@+id/getArea"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="250"
            android:textAlignment="center"
            android:inputType="number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="8dp"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:hint="@string/select_location"
            android:onClick="selectArea"
            android:padding="16dp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/radiusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:backgroundTint="@color/common_google_signin_btn_text_light_disabled"
        android:thumb="@drawable/icon_seek_bar"/>

    <TextView
        android:id="@+id/actualAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yourAddress"
        android:padding="6dp"
        android:paddingTop="4dp"
        android:textSize="14dp" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectLocation"/>

</LinearLayout>